--- a/src/assets/scss/homepage/_homepage.scss
+++ b/src/assets/scss/homepage/_homepage.scss
@@ -1,3 +1,4 @@
+
 .list-banner {
   .section-1 {
     video {
@@ -5,7 +6,7 @@
     }
   }
   .section-2 {
-    padding: 200px 0 100px;
+    padding: 150px 0 0px;
     background-color: #000;
     .top-parts,
     .bottom-parts {
@@ -55,7 +56,7 @@
   .section-3 {
     background-color: #000;
     position: relative;
-    padding: 70px 0 200px;
+    padding: 70px 0 100px;
     .video-container {
       margin: 0 auto;
       img {
@@ -64,18 +65,14 @@
     }
     .content-image {
       position: absolute;
-      top: 10vw;
-      left: 25%;
+      top: 5vw;
+      left: 15%;
       max-width: 400px;
       h2 {
         font-size: 2.8rem;
       }
     }
   }
-}
-.section-4 {
-  height: 650vh;
-  background-color: #fff;
 }
 .animate-box {
   position: sticky;
@@ -85,16 +82,56 @@
   height: 100vh;
   overflow: hidden;
 }
+.section-4 {
+  height: 400vh;
+  background-color: #fff;
+
+    .box-container {
+      transition: 1s ease-out;
+    transition-delay: 0s;
+    transform: translate(0, 0) scale(1);
+      margin: 0 auto;
+      width: 58%;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      .section-top {
+        position: relative;
+    margin: 3.125vw 4.1666666667vw 1.0416666667vw;
+      }
+      .section-bottom {
+        margin: 0 auto;
+    width: 100%;
+    height: 0;
+    padding-bottom: 59%;
+    position: relative;
+    overflow: hidden;
+    border-radius: 1.0416666667vw;
+    display: flex; // Cho phép các phần tử trong section-bottom nằm cạnh nhau
+    flex-direction: column; // Hiển thị theo chiều dọc
+    align-items: center; 
+      }
+    }
+  
+}
+
+.showUp {
+  opacity: 1;
+  transition: 1s ease-out;
+  transition-delay: 0s;
+  transform: translate(0, 0) scale(1);
+}
 .box-items {
   position: relative;
-  height: 5.2083333333vw;
+  height: 65px;
   transition: all ease-out 0.5s;
-  font-size: 2.65625vw;
+  font-size: 20px;
 }
 .top-item {
   background-color: red;
-  height: 5.2083333333vw;
-  line-height: 5.2083333333vw;
+  height: 65px;
   transition: all ease-out 0.5s;
   opacity: 0;
   transform: translateY(0%);
@@ -104,4 +141,169 @@
 .top-item.active {
   opacity: 1;
   transform: translateY(0%);
+}
+
+.section-5 {
+  height: 190vh;
+  position: relative;
+  color: rgb(28, 28, 28);
+  background-color: #f8f8fa;
+  text-align: center;
+  .animate-box {
+    position: sticky;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: flex-end;
+    max-width: 700px;
+    margin: 0 auto;
+    h2 {
+      position: absolute;
+      top: 0vh;
+      left: 0;
+      padding-top: 0;
+      width: 100%;
+      text-align: center;
+      font-size: 3.125vw;
+      line-height: 1.206;
+    }
+    .img-pro {
+      position: absolute;
+      top: 24vh;
+    }
+  }
+}
+
+.section-6 {
+  background-color: #000;
+  position: relative;
+  padding: 70px 0 200px;
+}
+.section-8 {
+  background-color: #000;
+  position: sticky;
+  color: rgb(255, 255, 255);
+  text-align: center;
+  padding: 100px 0 80px;
+  .slick-slider {
+    .slick-slide {
+      display: flex;
+      flex-flow: column;
+    }
+    .slick-prev {
+      position: absolute;
+      border: 1px solid #cccccc8c;
+      border-radius: 50%;
+      height: 60px;
+      left: 46%;
+      z-index: 99;
+      /* right: 0; */
+      text-align: center;
+      /* top: 150%; */
+      width: 60px;
+      &::before {
+        color: #fff;
+        content: "\f053";
+        display: block;
+        font-family: "Font Awesome 5 Free";
+        font-size: 24px;
+        font-weight: 900;
+      }
+    }
+    .slick-next {
+      position: absolute;
+      border: 1px solid #cccccc8c;
+      border-radius: 50%;
+      height: 60px;
+      right: 46%;
+      /* right: 0; */
+      text-align: center;
+      /* top: 150%; */
+      width: 60px;
+      &::before {
+        color: #fff;
+        content: "\f054";
+        display: block;
+        font-family: "Font Awesome 5 Free";
+        font-size: 24px;
+        font-weight: 900;
+      }
+    }
+  }
+  .grid-item {
+    img {
+      margin: 0 auto;
+      width: 50%;
+      border-radius: 25px;
+    }
+    h5 {
+      margin: 0 auto;
+      max-width: 300px;
+    }
+  }
+}
+
+.section-9 {
+  position: relative;
+  padding: 180px 0;
+  color: #1c1c1c;
+  background-color: #fff;
+  text-align: center;
+  h2 {
+    font-size: 45px;
+    margin-bottom: 30px;
+  }
+  p {
+    max-width: 700px;
+    font-weight: 500;
+    margin: 0 auto;
+    margin-bottom: 80px;
+    font-size: 18px;
+  }
+  .data-video {
+    border-radius: 25px;
+    overflow: hidden;
+  }
+}
+
+.section-10 {
+  background-color: #000;
+  position: relative;
+  color: rgb(255, 255, 255);
+  text-align: center;
+  padding-top: 100px;
+  h2 {
+    font-size: 45px;
+    font-weight: 500;
+    margin-bottom: 30px;
+  }
+  p {
+    font-size: 18px;
+    margin-bottom: 50px;
+  }
+  a.buy {
+    display: inline-block;
+    margin: 0 auto;
+    background-color: #0071e3;
+    color: #fff;
+    border-radius: 99px;
+    font-size: 18px;
+    padding: 8px 25px 6px;
+    cursor: pointer;
+  }
+  .list-info {
+    width: 25%;
+    margin: 0 auto;
+    h5 {
+      font-size: 22px;
+    }
+  }
+  .line-middle {
+    margin-top: 100px;
+    padding: 50px 0;
+    width: 100%;
+    border-top: 1px solid rgba(255, 255, 255, 0.3);
+  }
 }
