--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -3,10 +3,12 @@
 @import "homepage/header";
 @import "homepage/footer";
 @import "homepage/homepage";
+
+@import "responsive";
 @import url("https://use.fontawesome.com/releases/v5.15.4/css/all.css");
 
 body {
-
+  font-family:system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji" !important;
   .flex-1 {
     flex: 1;
   }
