--- a/src/assets/scss/homepage/_header.scss
+++ b/src/assets/scss/homepage/_header.scss
@@ -1,6 +1,12 @@
 .header {
   background-color: #fff;
   border-bottom: 1px solid #f2f2f2;
+  position: fixed;
+  border-bottom: 1px solid #e0e0e0;
+  box-shadow: 0 5px 5px rgba(0,0,0,.07);
+  top: 0px;
+  width: 100%;
+  z-index: 9999;
   .align-items-center {
     height: 65px;
   }
