--- a/src/assets/scss/homepage/_homepage.scss
+++ b/src/assets/scss/homepage/_homepage.scss
@@ -1,4 +1,3 @@
-
 .list-banner {
   .section-1 {
     video {
@@ -86,35 +85,40 @@
   height: 400vh;
   background-color: #fff;
 
-    .box-container {
-      transition: 1s ease-out;
+  .box-container {
+    transition: 1s ease-out;
     transition-delay: 0s;
     transform: translate(0, 0) scale(1);
-      margin: 0 auto;
-      width: 58%;
-      height: 100vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      .section-top {
-        position: relative;
-    margin: 3.125vw 4.1666666667vw 1.0416666667vw;
-      }
-      .section-bottom {
-        margin: 0 auto;
-    width: 100%;
-    height: 0;
-    padding-bottom: 59%;
-    position: relative;
-    overflow: hidden;
-    border-radius: 1.0416666667vw;
-    display: flex; // Cho phép các phần tử trong section-bottom nằm cạnh nhau
-    flex-direction: column; // Hiển thị theo chiều dọc
-    align-items: center; 
+    margin: 0 auto;
+    width: 60%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    .section-top {
+      position: relative;
+      margin: 00px 10px 50px;
+      h6 {
+        font-size: 1.25rem;
       }
     }
-  
+    .section-bottom {
+      margin: 0 auto;
+      width: 100%;
+      height: 0;
+      padding-bottom: 59%;
+      position: relative;
+      overflow: hidden;
+      border-radius: 1.0416666667vw;
+      display: flex; // Cho phép các phần tử trong section-bottom nằm cạnh nhau
+      flex-direction: column; // Hiển thị theo chiều dọc
+      align-items: center;
+      .active-video {
+      }
+
+    }
+  }
 }
 
 .showUp {
@@ -130,12 +134,29 @@
   font-size: 20px;
 }
 .top-item {
-  background-color: red;
+  font-size: 40px;
   height: 65px;
   transition: all ease-out 0.5s;
   opacity: 0;
   transform: translateY(0%);
   transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+  span {
+    padding: 0 0.5208333333vw;
+    font-size: 80px;
+    font-weight: 500;
+    background: -webkit-linear-gradient(left, #7bb4dc, #104e85);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    line-height: 1.2;
+  }
+  i {
+    font-size: 34px;
+    background: -webkit-linear-gradient(left, #7bb4dc, #104e85);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    font-weight: 500;
+    font-style: normal;
+  }
 }
 
 .top-item.active {
@@ -144,10 +165,11 @@
 }
 
 .section-5 {
-  height: 190vh;
+  height: 200vh;
   position: relative;
   color: rgb(28, 28, 28);
   background-color: #f8f8fa;
+  padding-bottom: 150px;
   text-align: center;
   .animate-box {
     position: sticky;
@@ -157,7 +179,7 @@
     height: 100vh;
     display: flex;
     align-items: flex-end;
-    max-width: 700px;
+    max-width: 600px;
     margin: 0 auto;
     h2 {
       position: absolute;
@@ -166,27 +188,45 @@
       padding-top: 0;
       width: 100%;
       text-align: center;
-      font-size: 3.125vw;
+      font-size: 2.6vw;
       line-height: 1.206;
     }
     .img-pro {
       position: absolute;
-      top: 24vh;
+      top: 25vh;
     }
   }
 }
 
 .section-6 {
+  height: 170vh;
   background-color: #000;
   position: relative;
-  padding: 70px 0 200px;
+  padding: 70px 0 0;
+  .data-video-small {
+    video {
+      border-radius: 25px;
+    }
+  }
 }
 .section-8 {
   background-color: #000;
-  position: sticky;
+  position: relative;
   color: rgb(255, 255, 255);
   text-align: center;
   padding: 100px 0 80px;
+  h2 {
+    font-size: 40px;
+    position: absolute;
+    max-width: 400px;
+    top:30%;
+    left: 0;
+    right: 0;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+  }
   .slick-slider {
     .slick-slide {
       display: flex;
