--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -52,6 +52,15 @@ body {
       margin-left: 25px;
     }
 }
+.w-70 {
+  width: 70% !important;
+}
+.w-80 {
+  width: 80% !important;
+}
+.w-90 {
+  width: 90% !important;
+}
 .text-right {
   text-align: right;
 }
