--- a/src/assets/scss/homepage/_homepage.scss
+++ b/src/assets/scss/homepage/_homepage.scss
@@ -1,4 +1,5 @@
 .list-banner {
+  overflow: auto;
   .section-1 {
     video {
       display: block;
@@ -73,14 +74,14 @@
     }
   }
 }
-.animate-box {
-  position: sticky;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  overflow: hidden;
-}
+// .animate-box {
+//   position: sticky;
+//   top: 0;
+//   left: 0;
+//   width: 100%;
+//   height: 100vh;
+//   overflow: hidden;
+// }
 .section-4 {
   height: 100vh;
   background-color: #fff;
@@ -89,7 +90,6 @@
     transition-delay: 0s;
     transform: translate(0, 0) scale(1);
     margin: 0 auto;
-    width: 60%;
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -99,6 +99,7 @@
       display: block;
 
       .active-video {
+        margin:0 auto;
         video {
           border-radius: 25px;
         }
@@ -174,14 +175,14 @@
 }
 
 .section-5 {
-  height: 200vh;
+  height: 120vh;
   position: relative;
   color: rgb(28, 28, 28);
   background-color: #f8f8fa;
   padding-bottom: 150px;
   text-align: center;
   .animate-box {
-    position: sticky;
+    position: relative;
     top: 0;
     left: 0;
     width: 100%;
@@ -198,7 +199,6 @@
       width: 100%;
       text-align: center;
       font-size: 2.6vw;
-      line-height: 1.206;
     }
     .img-pro {
       position: absolute;
@@ -228,7 +228,7 @@
   position: relative;
   color: rgb(255, 255, 255);
   text-align: center;
-  padding: 100px 0 80px;
+  padding: 100px 0 0;
   h2 {
     font-size: 40px;
     position: absolute;
