--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -91,3 +91,14 @@ body {
      transform: translateY(0);
   }
 }
+
+@keyframes slideInDown {
+  0% {
+    opacity: 0;
+    transform: translateY(-60px);
+ }
+ 100% {
+    opacity: 1;
+    transform: translateY(0);
+ }
+}
