--- a/src/assets/scss/_responsive.scss
+++ b/src/assets/scss/_responsive.scss
@@ -4,19 +4,25 @@
       .menu__item.left, .menu__item.right {
         display: none;
       }
+      .menu__item.center {
+        img {
+          width: 170px;
+        }
+      }
     }
   }
   .list-banner {
     .section-1 {
+      background-color: #000;
       .data-video {
-        height: 300px !important;
+        height: 350px !important;
         video {
           // object-fit: cover;
         }
       }
     }
     .section-2 {
-      padding: 50px 0 0;
+      padding: 0px 0 0;
       .top-parts {
         display: block;
       }
@@ -234,11 +240,18 @@
       .list-contact {
         ul {
           display: grid !important;
+            li {
+              img.img-qrcode {
+                display: none !important;
+              }
+            }
+          
         }
       }
       .line-middle {
         margin-top: 40px;
         padding: 15px 0;
+      
       }
     }
   }
