--- a/src/assets/scss/homepage/_header.scss
+++ b/src/assets/scss/homepage/_header.scss
@@ -7,6 +7,11 @@
   top: 0px;
   width: 100%;
   z-index: 9999;
+  .menu__item.center {
+    img {
+      width: 170px;
+    }
+  }
   .align-items-center {
     height: 65px;
   }
