--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -64,6 +64,14 @@ body {
 .w-90 {
   width: 90% !important;
 }
+
+//height 
+.h-90 {
+  height: 90% !important;
+}
+.h-80 {
+  height: 80% !important;
+}
 .text-right {
   text-align: right;
 }
